package correctedLSP;

class Bicycle implements Movable {
    @Override
    public void move() {
        System.out.println("The bicycle moves by pedaling.");
    }
}
