package correctedLSP;

class Car implements Movable {
    @Override
    public void move() {
        System.out.println("The car accelerates using the engine.");
    }
}
