package correctedLSP;

interface Movable {
    void move();
}
