package violationLSP;

class Vehicle {
    public void accelerate() {
        System.out.println("The vehicle is accelerating...");
    }
}
